WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
215529
Scrolling sync changes in
r261985
regressed CPU usage by ~2 ms/s
https://bugs.webkit.org/show_bug.cgi?id=215529
Summary
Scrolling sync changes in r261985 regressed CPU usage by ~2 ms/s
Simon Fraser (smfr)
Reported
2020-08-14 18:13:54 PDT
Scrolling sync changes in
r261985
regressed CPU usage by ~2 ms/s
Attachments
Patch
(6.28 KB, patch)
2020-08-14 18:16 PDT
,
Simon Fraser (smfr)
ggaren
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2020-08-14 18:16:47 PDT
Created
attachment 406641
[details]
Patch
Simon Fraser (smfr)
Comment 2
2020-08-14 18:17:53 PDT
<
rdar://problem/66866163
>
Geoffrey Garen
Comment 3
2020-08-14 21:15:42 PDT
Comment on
attachment 406641
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=406641&action=review
r=me
> Source/WebCore/page/scrolling/ScrollingTree.h:212 > + bool isRecentlyActive(); > + WEBCORE_EXPORT void setRecentlyActive();
Should we make these names more specific to wheel events? isProcessingWheelEvent() willProcessWheelEvent()
> Source/WebCore/page/scrolling/ScrollingTree.h:278 > + Lock m_lastEventTimeMutex; > + MonotonicTime m_lastEventTime;
Should we make these names more specific to wheel events? m_lastWheelEventTimeMutex m_lastWheelEventTime
Simon Fraser (smfr)
Comment 4
2020-08-14 22:14:14 PDT
(In reply to Geoffrey Garen from
comment #3
)
> Comment on
attachment 406641
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=406641&action=review
> > r=me > > > Source/WebCore/page/scrolling/ScrollingTree.h:212 > > + bool isRecentlyActive(); > > + WEBCORE_EXPORT void setRecentlyActive(); > > Should we make these names more specific to wheel events? > > isProcessingWheelEvent() > willProcessWheelEvent() > > > Source/WebCore/page/scrolling/ScrollingTree.h:278 > > + Lock m_lastEventTimeMutex; > > + MonotonicTime m_lastEventTime; > > Should we make these names more specific to wheel events? > > m_lastWheelEventTimeMutex > m_lastWheelEventTime
Perhaps, though the ScrollingThread exists only to process wheel events, so I don't feel the need to qualify further.
Simon Fraser (smfr)
Comment 5
2020-08-16 14:27:53 PDT
https://trac.webkit.org/changeset/265743/webkit
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug